# multi-agent-language-representation-emerging

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml
backend/: setup.py
backend/app/: main.py
backend/app/control/bot/: openaiBot.py
backend/storage/config/: main_config.yaml
